--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 
   <div class="full">
-    <body>
+   
       <section class="login">
         <header><img src="/assets/img/logo cristian.png"></header>
   
@@ -8,7 +8,9 @@
       <form [formGroup]="form">
         <input type="text" placeholder="Usuario" formControlName="usuario">
         <input type="password"  placeholder="Senha" formControlName="senha">
+        
         <button (click)="onLogin()">Entrar</button>
+        <p class="erro">{{msg_erro}}</p>
       </form>
       <footer>
         <p>Desenvolvido por Cristian Uller</p>
@@ -26,7 +28,7 @@
   
   
   
-    </body>
+  
 
   </div>
   
