--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,4 +1,8 @@
-
+.full{
+    background-image: url(/assets/img/yggy.png);
+    background-size: cover;
+   background-repeat: no-repeat;
+}
 
 header{
     background-color:rgba(26, 21, 16, 0.219) ;;
@@ -20,8 +24,8 @@ form {
     display: flex;
     flex-direction: column;
     margin-bottom: 0px;
-    align-items:start;
-    
+    align-items:center;
+    justify-content: center;
     color: black;
 }
 
@@ -35,16 +39,17 @@ input{
     border-radius: 5px;
     box-shadow:0 0 0.9em rgba(8, 8, 8, 0.72);
     
+    
 }
 
 button{
-    margin: 2vw;
+    margin-right: 17px;
     height: 3vw;
     width: 12vw;
     background-color:#CD853F ;
     border-radius: 5px;
     box-shadow:0 0 0.1em rgba(8, 8, 8, 0.72);
-    margin-left: 5vw;
+    
 }
 ::placeholder{
     color:rgb(0, 0, 0);
@@ -91,4 +96,7 @@ footer p{
     font-style: italic;
 }
 
+.erro{
+    text-shadow:0 0 0.1em rgba(0, 0, 0, 0.72);
+}
 
