--- a/src/app/pages/usuario/cad-usuario/cad-usuario.component.html
+++ b/src/app/pages/usuario/cad-usuario/cad-usuario.component.html
@@ -29,7 +29,11 @@
         <mat-form-field appearance="outline" color="primary">
             <mat-label>Login</mat-label>
             <input matInput formControlName="login" type="text">
-        </mat-form-field>         
+        </mat-form-field>       
+        <mat-form-field appearance="outline" color="primary">
+            <mat-label>Senha</mat-label>
+            <input matInput formControlName="login" type="text">
+        </mat-form-field>       
         
             
         
