--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 
     <div class="sidebar">
-        <img src="/assets/img/gajetopo.png" class="topo">
+        <img src="/assets/img/OIG1.png" class="topo">
         <h1>Pomar   -------Pro</h1>
         <nav>
             
@@ -11,14 +11,15 @@
             <details>
                 <summary>Administração</summary>
                 <a routerLink="/cadUsuario" >Usuário</a>
-                <a routerLink="material">Material</a>
-                <a routerLink="produto">Produto</a>
+                <a routerLink="/material">Material</a>
+                <a routerLink="/produto">Produto</a>
             </details>
             <details class="ultimo">
                 <summary>Pomar</summary>
-                <a href="#cadastro">Cadastro</a>
-                <a href="#Movimento">Movimento</a>
-                <a href="#colheita">Colheita</a>
+                <a routerLink="/pomarcad">Cadastro</a>
+                <a routerLink="/rotacao">Movimento</a>
+                <a routerLink="/colheita">Colheita</a>
+                <a routerLink="/arvore">Arvore</a>
             </details>
             <a href=""></a>
             
