--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    
 }
 
 .sidebar {
@@ -13,6 +14,8 @@ body {
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     border: 2px solid #f0c080;
     border-radius: 10px;
+    padding-bottom: 24px;
+    border-bottom-left-radius: 0px;
     position: relative;
     display: flex;
     flex-direction: column;
