--- a/src/app/pages/colheita/colheita.component.scss
+++ b/src/app/pages/colheita/colheita.component.scss
@@ -22,7 +22,7 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    
+    margin-top: -37%;
 }
 
 .controles button{
@@ -50,15 +50,15 @@ form{
     background-image: url(/assets/img/OIG2.jpeg);
     background-size: cover;
  }
-.relatorio{
+ .relatorio{
     position: absolute;
-    margin-top: -20%;
-    
+    margin-top: -22%;
+    margin-left: 17%;
     
 }
 .relatorio td{
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 30px;
     border-top: 2px black solid;
     border-bottom: 2px black solid;
 }
@@ -66,3 +66,4 @@ form{
     margin-right: 20px;
     background-color: green;
 }
+
