--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,3 +3,12 @@
     background-size: cover;
    background-repeat: no-repeat;
 }
+html,body{
+    
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 67%;
+    font-family: candara;
+    background-color:burlywood;
+}
