--- a/src/app/pages/produto/produto.component.scss
+++ b/src/app/pages/produto/produto.component.scss
@@ -22,7 +22,7 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    
+    margin-top: -37%;
 }
 
 .controles button{
@@ -37,28 +37,28 @@ form{
      transition-duration: 1s;
      cursor: help;
  }
-
+ 
  .detalhes{
     border: 1px black solid;
     margin: 0;
     margin-top: 0%;
     width: 80vh;
-    height: 105%;
+    height: 110%;
     position: absolute;
     top: 0;
     right: 0;
     background-image: url(/assets/img/OIG2.jpeg);
     background-size: cover;
  }
-.relatorio{
+ .relatorio{
     position: absolute;
-    margin-top: -20%;
-    
+    margin-top: -24%;
+    margin-left: 17%;
     
 }
 .relatorio td{
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 30px;
     border-top: 2px black solid;
     border-bottom: 2px black solid;
 }
