--- a/src/app/pages/rotacao/rotacao.component.scss
+++ b/src/app/pages/rotacao/rotacao.component.scss
@@ -22,7 +22,7 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    
+    margin-top: 7%;
 }
 
 .controles button{
@@ -43,22 +43,22 @@ form{
     margin: 0;
     margin-top: 0%;
     width: 80vh;
-    height: 105%;
+    height: 110%;
     position: absolute;
     top: 0;
     right: 0;
     background-image: url(/assets/img/OIG2.jpeg);
     background-size: cover;
  }
-.relatorio{
+ .relatorio{
     position: absolute;
-    margin-top: -20%;
-    
+    margin-top: 0%;
+    margin-left: 0%;
     
 }
 .relatorio td{
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 30px;
     border-top: 2px black solid;
     border-bottom: 2px black solid;
 }
@@ -66,3 +66,7 @@ form{
     margin-right: 20px;
     background-color: green;
 }
+
+
+
+
