--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,3 +61,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
    right: 0;
    
 }
+
+:root{
+  background-color: sienna;
+}
