--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -24,7 +24,7 @@
             <a href=""></a>
             
         </nav>
-        <button href="/login" class="sair">Sair</button>
+        <button routerLink="/login" class="sair">Sair</button>
         
     </div>
     
