--- a/src/app/pages/colheita/colheita.component.html
+++ b/src/app/pages/colheita/colheita.component.html
@@ -23,7 +23,7 @@
 
         <mat-form-field appearance="outline" color="primary">
             <mat-label>Arvore</mat-label>
-            <input matInput formControlName="td_arvore_id" type="number">
+            <input matInput formControlName="arvore" type="number">
         </mat-form-field>
     </form>
     <div class="detalhes">
