--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -67,3 +67,8 @@ form{
     margin-right: 20px;
     background-color: green;
 }
+.txt{
+    font-style: italic;
+    font-family: 'Sprite Graffiti', sans-serif;
+    font-size: xx-large;
+}
